--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-
 <div class="container">
   <div class="beautiful-message">
-    {{ phi > 0 ? 'phi value ' + phi :  'You are beautiful' }}
+    <div *ngIf="!calculating">
+      {{ phi > 0 ? 'phi value ' + phi : 'You are beautiful' }}
+    </div>
+    <div *ngIf="calculating">
+      {{ 'Calculating' }}
+    </div>
   </div>
   <div class="button-container">
     <button (click)="uploadImage()">Upload Image</button>
