--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <div *ngIf="calculating">
       {{ 'Calculating' }}
     </div>
+    <div class="default">1.618 is best</div>
   </div>
   <div class="button-container">
     <button (click)="uploadImage()">Upload Image</button>
