--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,9 @@
     font-size: 48px;
     text-align: center;
 }
+.default{
+    font-size: 24px;
+}
 button{
     background: none;
     border: 4px solid #bebebe;
